test/testdata/e2e/vs4/cluster.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Cluster
metadata:
  name: cluster1
spec:
  name: cluster1
  connect_timeout: 30s
  type: LOGICAL_DNS
  dns_lookup_family: V4_ONLY
  load_assignment:
    cluster_name: cluster1
    endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: www.example.com
                  port_value: 80
