test/testdata/e2e/vs4/virtual-service.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: virtual-service
  annotations:
    envoy.kaasops.io/node-id: tcp-proxy-test
spec:
  listener:
    name: tcp-proxy
